# smpl-env-experiments

./: .gitignore  .gitmodules  README.md  pyproject.toml
patches/d3rlpy-patch/: dataset.pxd  pyproject.toml  setup.py
patches/d3rlpy-patch/src/d3rlpy_patch/: dataset.cpp  dataset.pyi  dataset.pyx
patches/d3rlpy-patch/src/d3rlpy_patch/algos/: custom_bcq.py
patches/d3rlpy-patch/src/d3rlpy_patch/algos/torch/: __init__.py  custom_bcq_impl.py
patches/d3rlpy-patch/src/d3rlpy_patch/cpp/include/d3rlpy_patch/: dataset.h
patches/d3rlpy-patch/src/d3rlpy_patch/models/: builders.py
patches/d3rlpy-patch/src/d3rlpy_patch/models/torch/: __init__.py  common.py  encoders.py  func.py  imitators.py
test/: PenSimEnvTest.py  algotest.py  dataset_test.py
test/algotest/: offline_experiments.yaml  offline_temporal_dataset_generation.py  offline_training.py  project_title.txt
